2009-05-05 Karl Lehenbauer <karl@apache.org>
    * Add new Rivet Tcl command,apache_table, which can query, get and set
      values in the Apache "notes", "headers_in", "headers_out",
      "err_headers_out" and "subprocess_env" tables.

    * Add new "upload" option "tempname" that'll return the name of the
      temporary file containing the upload.

2009-05-01 Karl Lehenbauer <karl@apache.org>
    * Rename global request rec pointer from globalrr to 
      rivet_panic_request_rec, add rivet_panic_pool and
      rivet_panic_server_rec, grabbing those values from Rivet initialization
      rather than request handling so that they are initialized enough that
      Rivet_Panic can use them.  (Previously Rivet_Panic or Tcl_Panic at 
      initialization time caused a null-pointer-dereference segmentation 
      violation because no request was being served.

      In Rivet_Panic, avoid emitting the unparsed URI unless a request is
      being processed.

2009-04-27 Karl Lehenbauer <karl@apache.org>

    * src/apache-2/mod_rivet.c: In Rivet_SendContent, when checking to see
      if the file doesn't exist, check r->finfo.filetype rather than
      r->finfo.protection.  (The prior check failed to detect that the
      Rivet source file did not exist, causing zero length webpages to
      be sent rather than 404's.)

2009-01-16 Massimo Manghi <mxmanghi@apache.org>

    * Makefile.am: Add DESTLIB variable handling as suggested
    by kikusz@gmail.com and accordingly with Automake directives
    for local install rules.

2008-12-21 Massimo Manghi <mxmanghi@apache.ora>

    * src/apache-2/rivetCode.c: add handling for subcommand
    'tempname'

2008-12-15 Massimo Manghi <mxmanghi@apache.org>

    * src/apache-2/TclWebapache.c: fixed test on configuaration
    flag 'upload_files_to_var' 

2008-12-11 Massimo Manghi <mxmanghi@apache.org>
    
    * src/apache-2/mod_rivet.c: fixed call to apr_strcat in function